--- a/src/App.css
+++ b/src/App.css
@@ -37,12 +37,19 @@ a:hover {
 .nav-container {
   position: fixed;
   left: 0;
-  width: 20%;
+  width: 30%;
   margin: 10px;
   height: 100vh;
   margin: 0px;
   background-color: rgb(0, 21, 41);
 }
+
+@media only screen and (min-width: 900px) {
+  .nav-container {
+    width: fit-content;
+  }
+}
+
 .logo-container {
   background-color: #001529;
   display: flex;
